--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -7,7 +7,7 @@
 #spring.datasource.initialization-mode=always
 
 database=mysql
-spring.cloud.gcp.sql.database-name=petclinic
+spring.cloud.gcp.sql.database-name=app-data-petclinic
 spring.cloud.gcp.sql.instance-connection-name=itx-data-dabdemo-dev:europe-west4:app-data-petclinic-instance
 # Initialize the database since the newly created Cloud SQL database has no tables. The following flag is for Spring Boot 2.
 spring.datasource.initialization-mode=always
