--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,5 +1,5 @@
 database=mysql
 spring.cloud.gcp.sql.database-name=data-petclinic
-spring.cloud.gcp.sql.instance-connection-name=itx-dat-pocdab-euwe4-test:europe-west4:data-petclinic-instance
+spring.cloud.gcp.sql.instance-connection-name=itx-dat-pocdab-euwe4-test:europe-west2:data-petclinic-instance-1-ew2
 # Initialize the database since the newly created Cloud SQL database has no tables. The following flag is for Spring Boot 2.
 spring.datasource.initialization-mode=always
