--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,5 @@ logging.level.org.springframework=INFO
 spring.resources.cache.cachecontrol.max-age=12h
 
 # In the last line, add mysql to the spring.profiles.active property
+management.contextPath=/_ah
 spring.profiles.active=mysql
