--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,8 +1,8 @@
 #runtime: java11
 #instance_class: F1
 #service: data-petclinic
-runtime: java
-env: flex
+runtime: java11
+#env: flex
 
 resources:
   memory_gb: 2.3
