--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,5 +1,18 @@
 database=mysql
 spring.cloud.gcp.sql.database-name=data-petclinic
 spring.cloud.gcp.sql.instance-connection-name=itx-dat-pocdab-euwe4-dev:europe-west2:data-petclinic-instance-1-ew2
-# Initialize the database since the newly created Cloud SQL database has no tables. The following flag is for Spring Boot 2.
+
+# So app starts despite "table already exists" errors.
+spring.datasource.continue-on-error=true
+
+# Enforces database initialization
 spring.datasource.initialization-mode=always
+
+# Leave empty for root, uncomment and fill out if you specified a user
+#spring.datasource.username=
+
+# Uncomment if root password is specified
+#spring.datasource.password=
+
+#spring.cloud.gcp.project-id=
+#spring.cloud.gcp.credentials.location=file:/path/to/service-account.json
